# arms_ros

./: .gitignore
ampi_project_interfaces/: CMakeLists.txt
arms-assembly-panels/: CHANGELOG.md  README.md  package-lock.json  package.json  unknown.arms-assembly-panels-0.0.0.foxe
arms-assembly-panels/src/: AssemblyStagePanel.tsx  PipelineControlPanel.tsx  index.ts
arms_description/: CMakeLists.txt  package.xml
arms_description/launch/: view_arms.launch.py
arms_description/urdf/: arms.xacro
arms_isaacsim/: README.md
arms_isaacsim/exts/arms.assembly.sim/arms/assembly/sim/: scene_builder.py  sequence_player.py  stl_reader.py
arms_isaacsim/exts/arms.assembly.sim/config/: extension.toml
arms_isaacsim/scripts/: digital_twin.py  import_tool.py  run_digital_twin.sh  run_simulation.py
arms_machine_msgs/: CMakeLists.txt  package.xml
arms_machine_msgs/action/: ExecuteAssembly.action  InsertScrew.action  LoadRecipe.action  PrintSegment.action  TransferBed.action  VacuumPick.action  VacuumPlace.action
arms_machine_msgs/msg/: MachineState.msg
arms_model/: Self-Release Bed - Bed Frame X-1.STL  Self-Release Bed - Bed Frame X-2.STL  Self-Release Bed - Bed Frame Y-1.STL  Self-Release Bed - Bed Frame Y-2.STL  Self-Release Bed - Bed Frame Y-3.STL  Self-Release Bed - Heat Spreader-1.STL  Self-Release Bed - SRB Base Plate-1.STL  Self-Release Bed - Touch Probe-1.STL
arms_recipe_builder/: CMakeLists.txt  package.xml
arms_recipe_builder/arms_recipe_builder/: recipe_builder_node.py  recipe_ui.py
arms_recipe_builder/launch/: arms_sim.launch.py
assembler/: CMakeLists.txt  SPAWNING_GUIDE.md  package.xml
assembler/include/assembler/: ARMSConfig.hpp  AdvancedCradleGenerator.hpp  Assembler.hpp  Assembly.hpp  CoalAdapter.hpp  CollisionAdapter.hpp  CradleGenerator.hpp  GCodeGenerator.hpp  JigGenerator.hpp  Logger.hpp  MeshAsset.hpp  MeshFunctions.hpp  PPGGraspGenerator.hpp  Part.hpp  RaftGenerator.hpp  SceneModel.hpp  SparseCradleGenerator.hpp  Tessellator.hpp  TestCradleGenerator.hpp  VacuumGraspGenerator.hpp  WebotsSpawner.hpp
assembler/launch/: assembler.launch.py  assembler_webots.launch.py
assembler/src/: ARMSConfig.cpp  AdvancedCradleGenerator.cpp  Assembler.cpp  Assembly.cpp  CoalAdapter.cpp  CradleGenerator.cpp  CradleGeneratorOld.cpp  GCodeGenerator.cpp  JigGenerator.cpp  MeshFunctions.cpp  ModelLoader.cpp  PPGGraspGenerator.cpp  Part.cpp  RaftGenerator.cpp  SceneModel.cpp  SparseCradleGenerator.cpp  Tessellator.cpp  TestCradleGenerator.cpp  VacuumGraspGenerator.cpp  assembler_node.cpp  assembler_node_updated.cpp
assembler_interfaces/: CMakeLists.txt  package.xml
assembler_interfaces/srv/: LoadModel.srv
assembler_msgs/: CMakeLists.txt  package.xml
assembler_msgs/action/: ProcessModel.action
assembler_msgs/srv/: ListModels.srv  SetStage.srv  StartPipeline.srv
assembler_output/: .~lock.assembly_plan.yaml#  stacker.py
foxglove_panels/: package-lock.json  package.json  tsconfig.json  webpack.config.js
foxglove_panels/src/: AssemblyStagePanel.tsx  index.ts
webots_controllers/: CMakeLists.txt  package.xml
webots_controllers/controllers/supervisor_controller/: Makefile  supervisor_controller.cpp
webots_controllers/worlds/: assembler_world.wbt
webots_model_loader/: CMakeLists.txt  package.xml
webots_model_loader/src/: webots_model_loader.cpp
